--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.11.1",
+    "client-oauth2": "^4.2.3",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.3",
     "cross-spawn": "^6.0.5",
@@ -36,6 +37,7 @@
     "gulp-util": "^3.0.7",
     "keypather": "^3.0.0",
     "marked": "^0.4.0",
+    "moment": "^2.23.0",
     "notifications-node-client": "^4.1.0",
     "nunjucks": "^3.1.3",
     "nunjucks-markdown": "^2.0.1",
